Got a basic request working. I feel comfortable enough with this to make more.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SmashGGMobileDashboard</string>
+    <string name="endpoint">https://api.smash.gg/gql/alpha</string>
 </resources>
